// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast component renders error toast correctly 1`] = `
<section
  class="toast error"
>
  <div
    class="flex-space-between-container notification"
  >
    <span
      class="material-symbols-outlined warning"
    />
    <div
      class="message"
    >
      <p
        class="content"
      >
        Error message
      </p>
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    >
      X
    </button>
  </div>
</section>
`;

exports[`Toast component renders success toast correctly 1`] = `
<section
  class="toast success"
>
  <div
    class="flex-space-between-container notification"
  >
    <span
      class="material-symbols-outlined done"
    />
    <div
      class="message"
    >
      <p
        class="content"
      >
        Success message
      </p>
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    >
      X
    </button>
  </div>
</section>
`;
